style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap');

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.header {
    display:flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    padding: 10px;
    height: 60px;
}

.footer {
    height: 72px;
    background: #1F2937;
    color: #F9FAF8;
    justify-content: space-between;
    display: flex;
    justify-content: center;
    align-items: center;
}

span.emoji {
    font-size: 30px;
    vertical-align: middle;
    line-height: 2;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
}

.links {
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
    gap: 15px;
}

a {
    text-decoration: none;
    color: aliceblue;
}

li {
    list-style: none;
    display: flex;
}

.hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("imgs/hero-image");
    height: 550px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;            
}

.hero-text {
    display: flex;
    flex:1;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding: 10px;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.hero-text h1 {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.hero-text p {
    font-size: 18px;
    color: #E5E7EB;
}

.drivers h1 {
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    text-align: center;
    margin: 30px;
}

.drivers {
    display: flex;
    flex-direction: column;
    margin: 10px;
    padding: 15px;
}

.cards {
    display: flex;
    margin: 20px;
    gap: 20px;
    flex-wrap: wrap;
}

.container {
    position: relative;
    width: 300px;
    height: 400px;
  }
  
  .image {
    display: block;
    width: 100%;
    height: 400px;
    border-radius: 10px;
  }
  
  .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 400px;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: blue;
    border-radius: 10px;
  }
  
  .container:hover .overlay {
    opacity: 0.8;
  }
  
  .text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: start;
  }

